Pulling in spring framework dependencies from the jar file now during gradle compile

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ spring-android-commons-logging/src/test/java/exploration
 spring-android-rest-template/src/test/java/exploration
 **/.classpath
 **/.project
+**/lib
