--- a/build.gradle
+++ b/build.gradle
@@ -151,14 +151,15 @@ project('spring-android-commons-logging') {
 project('spring-android-rest-template') {
     description = 'Spring Android Rest Template'
     
-	libDir = "$buildDir/classes/main/"
+	projBuildDir = "$buildDir/classes/main/"
+	projLibDir = "$buildDir/exploded-jars/"
 	    
     dependencies {
 	    compile ("com.google.android:android:$androidVersion") { provided = true }
         compile "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
         compile "org.slf4j:slf4j-api:$slf4jVersion"
         compile "org.slf4j:slf4j-android:$slf4jAndroidVersion"
-        compile files(libDir)
+        compile files(projLibDir)
 	}
 		
 //	println "classpath = ${configurations.compile.collect {File file -> file.name}}"	
@@ -179,6 +180,7 @@ project('spring-android-rest-template') {
 		'org/springframework/core/io/ByteArrayResource.class',
 		'org/springframework/core/io/ClassPathResource.class',
 		'org/springframework/core/io/InputStreamSource.class',
+		'org/springframework/core/io/package-info.class',
 		'org/springframework/core/io/Resource.class',
 		'org/springframework/http/HttpEntity.class',
 		'org/springframework/http/HttpHeaders.class',
@@ -207,7 +209,9 @@ project('spring-android-rest-template') {
 		'org/springframework/http/converter/HttpMessageConverter.class',
 		'org/springframework/http/converter/HttpMessageNotReadableException.class',
 		'org/springframework/http/converter/HttpMessageNotWritableException.class',
+		'org/springframework/http/converter/package-info.class',
 //		'org/springframework/http/converter/ResourceHttpMessageConverter.class',
+//		'org/springframework/http/converter/ResourceHttpMessageConverter$MultipartHttpOutputMessage.class',
 		'org/springframework/http/converter/StringHttpMessageConverter.class',
 		'org/springframework/http/converter/json/MappingJacksonHttpMessageConverter.class',
 		'org/springframework/http/converter/json/package-info.class',
@@ -227,6 +231,7 @@ project('spring-android-rest-template') {
 		'org/springframework/web/client/HttpMessageConverterExtractor.class',
 		'org/springframework/web/client/HttpServerErrorException.class',
 		'org/springframework/web/client/HttpStatusCodeException.class',
+		'org/springframework/web/client/package-info.class',
 		'org/springframework/web/client/RequestCallback.class',
 		'org/springframework/web/client/ResourceAccessException.class',
 		'org/springframework/web/client/ResponseErrorHandler.class',
@@ -234,7 +239,14 @@ project('spring-android-rest-template') {
 		'org/springframework/web/client/RestClientException.class',
 		'org/springframework/web/client/RestOperations.class',
 //		'org/springframework/web/client/RestTemplate.class',
+//		'org/springframework/web/client/RestTemplate$AcceptHeaderRequestCallback.class',
+//		'org/springframework/web/client/RestTemplate$HeadersExtractor.class',
+//		'org/springframework/web/client/RestTemplate$HttpEntityRequestCallback.class',
+//		'org/springframework/web/client/RestTemplate$HttpUrlTemplate.class',
+//		'org/springframework/web/client/RestTemplate$ResponseEntityResponseExtractor.class',
+		'org/springframework/web/util/package-info.class',
 		'org/springframework/web/util/UriTemplate.class',
+		'org/springframework/web/util/UriTemplate$Parser.class',
 		'org/springframework/web/util/UriUtils.class'
 		]
 		
@@ -243,9 +255,14 @@ project('spring-android-rest-template') {
 	jars.each { jar ->
 		zipTree(jar).visit { classFile ->
 			if (classFile.relativePath.toString() in classFilter) {
+				filePath = classFile.relativePath.getPathString().minus(classFile.name)
 				copy {
 					from classFile.file
-					into libDir + classFile.relativePath.getPathString().minus(classFile.name)
+					into projLibDir + filePath
+				}
+				copy {
+					from classFile.file
+					into projBuildDir + filePath
 				}
 			}
 		}
