Addressed an issue where CharSet.toString() did not work correctly on Android. The method to use is CharSet.name(), as it correctly returns the canonical name.

--- a/build.gradle
+++ b/build.gradle
@@ -190,9 +190,9 @@ project('spring-android-rest-template') {
 		'org/springframework/http/HttpOutputMessage.class',
 		'org/springframework/http/HttpStatus.class',
 		'org/springframework/http/HttpStatus$Series.class',
-		'org/springframework/http/MediaType.class',
-		'org/springframework/http/MediaType$1.class',
-		'org/springframework/http/MediaType$2.class',
+//		'org/springframework/http/MediaType.class',
+//		'org/springframework/http/MediaType$1.class',
+//		'org/springframework/http/MediaType$2.class',
 		'org/springframework/http/ResponseEntity.class',
 		'org/springframework/http/client/AbstractClientHttpRequest.class',
 		'org/springframework/http/client/ClientHttpRequest.class',
