--- a/build.gradle
+++ b/build.gradle
@@ -150,100 +150,88 @@ project('spring-android-rest-template') {
     dependencies {
         dependencyconf "org.springframework:spring-web:$springVersion"
     }
-    
-    // Required classes for RestTemplate support
-    classFilter = [
-		'org/springframework/core/NestedExceptionUtils.class',
-		'org/springframework/core/NestedIOException.class',
-		'org/springframework/core/NestedRuntimeException.class',
-//    	'org/springframework/core/io/AbstractFileResolvingResource.class',
-		'org/springframework/core/io/AbstractResource.class',
-		'org/springframework/core/io/ByteArrayResource.class',
-		'org/springframework/core/io/ClassPathResource.class',
-		'org/springframework/core/io/InputStreamSource.class',
-		'org/springframework/core/io/package-info.class',
-		'org/springframework/core/io/Resource.class',
-		'org/springframework/http/HttpEntity.class',
-		'org/springframework/http/HttpHeaders.class',
-		'org/springframework/http/HttpInputMessage.class',
-		'org/springframework/http/HttpMessage.class',
-		'org/springframework/http/HttpMethod.class',
-		'org/springframework/http/HttpOutputMessage.class',
-		'org/springframework/http/HttpStatus.class',
-		'org/springframework/http/HttpStatus$Series.class',
-//		'org/springframework/http/MediaType.class',
-//		'org/springframework/http/MediaType$1.class',
-//		'org/springframework/http/MediaType$2.class',
-		'org/springframework/http/ResponseEntity.class',
-		'org/springframework/http/client/AbstractClientHttpRequest.class',
-		'org/springframework/http/client/ClientHttpRequest.class',
-		'org/springframework/http/client/ClientHttpRequestFactory.class',
-		'org/springframework/http/client/ClientHttpResponse.class',
-		'org/springframework/http/client/SimpleClientHttpRequest.class',
-		'org/springframework/http/client/SimpleClientHttpRequestFactory.class',
-		'org/springframework/http/client/SimpleClientHttpResponse.class',
-		'org/springframework/http/client/support/HttpAccessor.class',
-		'org/springframework/http/converter/AbstractHttpMessageConverter.class',
-		'org/springframework/http/converter/ByteArrayHttpMessageConverter.class',
-//		'org/springframework/http/converter/FormHttpMessageConverter.class',
-		'org/springframework/http/converter/HttpMessageConversionException.class',
-		'org/springframework/http/converter/HttpMessageConverter.class',
-		'org/springframework/http/converter/HttpMessageNotReadableException.class',
-		'org/springframework/http/converter/HttpMessageNotWritableException.class',
-		'org/springframework/http/converter/package-info.class',
-//		'org/springframework/http/converter/ResourceHttpMessageConverter.class',
-//		'org/springframework/http/converter/ResourceHttpMessageConverter$MultipartHttpOutputMessage.class',
-		'org/springframework/http/converter/StringHttpMessageConverter.class',
-		'org/springframework/http/converter/json/MappingJacksonHttpMessageConverter.class',
-		'org/springframework/http/converter/json/package-info.class',
-		'org/springframework/util/Assert.class',
-//		'org/springframework/util/ClassUtils.class',
-		'org/springframework/util/CollectionUtils.class',
-		'org/springframework/util/CollectionUtils$EnumerationIterator.class',
-		'org/springframework/util/FileCopyUtils.class',
-		'org/springframework/util/LinkedCaseInsensitiveMap.class',
-		'org/springframework/util/LinkedMultiValueMap.class',
-		'org/springframework/util/MultiValueMap.class',
-		'org/springframework/util/ObjectUtils.class',
-		'org/springframework/util/ResourceUtils.class',
-		'org/springframework/util/StringUtils.class',
-		'org/springframework/web/client/DefaultResponseErrorHandler.class',
-		'org/springframework/web/client/HttpClientErrorException.class',
-		'org/springframework/web/client/HttpMessageConverterExtractor.class',
-		'org/springframework/web/client/HttpServerErrorException.class',
-		'org/springframework/web/client/HttpStatusCodeException.class',
-		'org/springframework/web/client/package-info.class',
-		'org/springframework/web/client/RequestCallback.class',
-		'org/springframework/web/client/ResourceAccessException.class',
-		'org/springframework/web/client/ResponseErrorHandler.class',
-		'org/springframework/web/client/ResponseExtractor.class',
-		'org/springframework/web/client/RestClientException.class',
-		'org/springframework/web/client/RestOperations.class',
-//		'org/springframework/web/client/RestTemplate.class',
-//		'org/springframework/web/client/RestTemplate$AcceptHeaderRequestCallback.class',
-//		'org/springframework/web/client/RestTemplate$HeadersExtractor.class',
-//		'org/springframework/web/client/RestTemplate$HttpEntityRequestCallback.class',
-//		'org/springframework/web/client/RestTemplate$HttpUrlTemplate.class',
-//		'org/springframework/web/client/RestTemplate$ResponseEntityResponseExtractor.class',
-		'org/springframework/web/util/package-info.class',
-		'org/springframework/web/util/UriTemplate.class',
-		'org/springframework/web/util/UriTemplate$Parser.class',
-		'org/springframework/web/util/UriUtils.class'
-		]
-		
-	// loops through spring framework jars, extracting and copying class files to the lib folder
-	FileCollection jars = configurations.dependencyconf
-	jars.each { jar ->
-		zipTree(jar).visit { classFile ->
-			if (classFile.relativePath.toString() in classFilter) {
-				filePath = classFile.relativePath.getPathString().minus(classFile.name)
-				copy {
-					from classFile.file
-					into projLibDir + filePath
-				}
-				copy {
-					from classFile.file
-					into projBuildDir + filePath
+
+	compileJava.doFirst {
+    	// Required classes for RestTemplate support
+	    classFilter = [
+			'org/springframework/core/NestedExceptionUtils.class',
+			'org/springframework/core/NestedIOException.class',
+			'org/springframework/core/NestedRuntimeException.class',
+			'org/springframework/core/io/AbstractResource.class',
+			'org/springframework/core/io/ByteArrayResource.class',
+			'org/springframework/core/io/ClassPathResource.class',
+			'org/springframework/core/io/InputStreamSource.class',
+			'org/springframework/core/io/package-info.class',
+			'org/springframework/core/io/Resource.class',
+			'org/springframework/http/HttpEntity.class',
+			'org/springframework/http/HttpHeaders.class',
+			'org/springframework/http/HttpInputMessage.class',
+			'org/springframework/http/HttpMessage.class',
+			'org/springframework/http/HttpMethod.class',
+			'org/springframework/http/HttpOutputMessage.class',
+			'org/springframework/http/HttpStatus.class',
+			'org/springframework/http/HttpStatus$Series.class',
+			'org/springframework/http/ResponseEntity.class',
+			'org/springframework/http/client/AbstractClientHttpRequest.class',
+			'org/springframework/http/client/ClientHttpRequest.class',
+			'org/springframework/http/client/ClientHttpRequestFactory.class',
+			'org/springframework/http/client/ClientHttpResponse.class',
+			'org/springframework/http/client/SimpleClientHttpRequest.class',
+			'org/springframework/http/client/SimpleClientHttpRequestFactory.class',
+			'org/springframework/http/client/SimpleClientHttpResponse.class',
+			'org/springframework/http/client/support/HttpAccessor.class',
+			'org/springframework/http/converter/AbstractHttpMessageConverter.class',
+			'org/springframework/http/converter/ByteArrayHttpMessageConverter.class',
+			'org/springframework/http/converter/HttpMessageConversionException.class',
+			'org/springframework/http/converter/HttpMessageConverter.class',
+			'org/springframework/http/converter/HttpMessageNotReadableException.class',
+			'org/springframework/http/converter/HttpMessageNotWritableException.class',
+			'org/springframework/http/converter/package-info.class',
+			'org/springframework/http/converter/StringHttpMessageConverter.class',
+			'org/springframework/http/converter/json/MappingJacksonHttpMessageConverter.class',
+			'org/springframework/http/converter/json/package-info.class',
+			'org/springframework/util/Assert.class',
+			'org/springframework/util/CollectionUtils.class',
+			'org/springframework/util/CollectionUtils$EnumerationIterator.class',
+			'org/springframework/util/FileCopyUtils.class',
+			'org/springframework/util/LinkedCaseInsensitiveMap.class',
+			'org/springframework/util/LinkedMultiValueMap.class',
+			'org/springframework/util/MultiValueMap.class',
+			'org/springframework/util/ObjectUtils.class',
+			'org/springframework/util/ResourceUtils.class',
+			'org/springframework/util/StringUtils.class',
+			'org/springframework/web/client/DefaultResponseErrorHandler.class',
+			'org/springframework/web/client/HttpClientErrorException.class',
+			'org/springframework/web/client/HttpMessageConverterExtractor.class',
+			'org/springframework/web/client/HttpServerErrorException.class',
+			'org/springframework/web/client/HttpStatusCodeException.class',
+			'org/springframework/web/client/package-info.class',
+			'org/springframework/web/client/RequestCallback.class',
+			'org/springframework/web/client/ResourceAccessException.class',
+			'org/springframework/web/client/ResponseErrorHandler.class',
+			'org/springframework/web/client/ResponseExtractor.class',
+			'org/springframework/web/client/RestClientException.class',
+			'org/springframework/web/client/RestOperations.class',
+			'org/springframework/web/util/package-info.class',
+			'org/springframework/web/util/UriTemplate.class',
+			'org/springframework/web/util/UriTemplate$Parser.class',
+			'org/springframework/web/util/UriUtils.class'
+			]
+	
+		// loops through spring framework jars, extracting and copying class files to the lib folder
+		FileCollection jars = configurations.dependencyconf
+		jars.each { jar ->
+			zipTree(jar).visit { classFile ->
+				if (classFile.relativePath.toString() in classFilter) {
+					filePath = classFile.relativePath.getPathString().minus(classFile.name)
+					copy {
+						from classFile.file
+						into projLibDir + filePath
+					}
+					copy {
+						from classFile.file
+						into projBuildDir + filePath
+					}
 				}
 			}
 		}
