--- a/build.gradle
+++ b/build.gradle
@@ -96,18 +96,8 @@ configure(javaprojects) {
     // add tasks for finding and publishing .xsd files
     apply from: "$buildSrcDir/schema-publication.gradle"
 
-    junitVersion = '4.7'
-    log4jVersion = '1.2.16'
     springVersion = '3.0.5.RELEASE'
     androidVersion = '1.5_r3'
-    jacksonVersion = '1.5.3'
-
-    // dependencies that are common across all java projects
-    dependencies {
-        testCompile "junit:junit:$junitVersion"
-        testCompile "log4j:log4j:$log4jVersion"
-        testCompile "org.springframework:spring-test:$springVersion"
-    }
 
     // enable all compiler warnings (GRADLE-1077)
     [compileJava, compileTestJava]*.options*.compilerArgs = ['-Xlint:all']
@@ -125,7 +115,10 @@ configure(javaprojects) {
 project('spring-android-commons-logging') {
     description = 'Spring Android Commons Logging'
     dependencies {
-        compile ("com.google.android:android:$androidVersion") { provided = true }
+        compile ("com.google.android:android:$androidVersion") { 
+            provided = true 
+            transitive = false
+        }
     }
 }
 
@@ -136,7 +129,6 @@ project('spring-android-rest-template') {
     sourceSets.main.resources.srcDir projLibDir
 	
 	dependencies {
-        compile ("com.google.android:android:$androidVersion") { provided = true }
         compile project(":spring-android-commons-logging")
         compile files(projLibDir)
     }
