--- a/build.gradle
+++ b/build.gradle
@@ -96,8 +96,21 @@ configure(javaprojects) {
     // add tasks for finding and publishing .xsd files
     apply from: "$buildSrcDir/schema-publication.gradle"
 
+    junitVersion = '4.7'
+    log4jVersion = '1.2.16'
     springVersion = '3.0.5.RELEASE'
     androidVersion = '1.5_r3'
+    javaxServletApiVersion = '2.5'
+    commonsFileuploadVersion = '1.2'
+    jettyVersion = '6.1.9'
+    jacksonVersion = '1.4.2'
+    
+    // dependencies that are common across all java projects
+    dependencies {
+        testCompile "junit:junit:$junitVersion"
+        testCompile "log4j:log4j:$log4jVersion"
+        testCompile "org.springframework:spring-test:$springVersion"
+    }
 
     // enable all compiler warnings (GRADLE-1077)
     [compileJava, compileTestJava]*.options*.compilerArgs = ['-Xlint:all']
@@ -116,8 +129,8 @@ project('spring-android-commons-logging') {
     description = 'Spring Android Commons Logging'
     dependencies {
         compile ("com.google.android:android:$androidVersion") { 
-            provided = true 
-            transitive = false
+            provided = true
+			transitive = false
         }
     }
 }
@@ -129,8 +142,14 @@ project('spring-android-rest-template') {
     sourceSets.main.resources.srcDir projLibDir
 	
 	dependencies {
-        compile project(":spring-android-commons-logging")
+//      compile project(":spring-android-commons-logging")
+        compile ("com.google.android:android:$androidVersion") { provided = true }
         compile files(projLibDir)
+        testCompile ("javax.servlet:servlet-api:$javaxServletApiVersion")
+        testCompile ("commons-fileupload:commons-fileupload:$commonsFileuploadVersion")
+        testCompile "org.mortbay.jetty:jetty:$jettyVersion"
+        testCompile "org.springframework:spring-web:$springVersion"
+        testCompile "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
     }
 	
     // configuration for extracting required class files
@@ -144,13 +163,16 @@ project('spring-android-rest-template') {
         // Required classes for RestTemplate support
         classFilter = [
             'org/springframework/beans/factory/DisposableBean.class',
+            'org/springframework/beans/factory/package-info.class',
             'org/springframework/core/NestedExceptionUtils.class',
             'org/springframework/core/NestedIOException.class',
             'org/springframework/core/NestedRuntimeException.class',
+            'org/springframework/core/package-info.class',
             'org/springframework/core/io/AbstractResource.class',
             'org/springframework/core/io/ByteArrayResource.class',
             'org/springframework/core/io/ClassPathResource.class',
             'org/springframework/core/io/InputStreamSource.class',
+            'org/springframework/core/io/package-info.class',
             'org/springframework/core/io/Resource.class',
             'org/springframework/http/HttpEntity.class',
             'org/springframework/http/HttpHeaders.class',
@@ -160,6 +182,7 @@ project('spring-android-rest-template') {
             'org/springframework/http/HttpOutputMessage.class',
             'org/springframework/http/HttpStatus.class',
             'org/springframework/http/HttpStatus$Series.class',
+            'org/springframework/http/package-info.class',
             'org/springframework/http/ResponseEntity.class',
             'org/springframework/http/client/AbstractClientHttpRequest.class',
             'org/springframework/http/client/CommonsClientHttpRequest.class',
@@ -168,18 +191,22 @@ project('spring-android-rest-template') {
             'org/springframework/http/client/ClientHttpRequest.class',
             'org/springframework/http/client/ClientHttpRequestFactory.class',
             'org/springframework/http/client/ClientHttpResponse.class',
+            'org/springframework/http/client/package-info.class',
             'org/springframework/http/client/SimpleClientHttpRequest.class',
             'org/springframework/http/client/SimpleClientHttpRequestFactory.class',
             'org/springframework/http/client/SimpleClientHttpResponse.class',
             'org/springframework/http/client/support/HttpAccessor.class',
+            'org/springframework/http/client/support/package-info.class',
             'org/springframework/http/converter/AbstractHttpMessageConverter.class',
             'org/springframework/http/converter/ByteArrayHttpMessageConverter.class',
             'org/springframework/http/converter/HttpMessageConversionException.class',
             'org/springframework/http/converter/HttpMessageConverter.class',
             'org/springframework/http/converter/HttpMessageNotReadableException.class',
             'org/springframework/http/converter/HttpMessageNotWritableException.class',
+            'org/springframework/http/converter/package-info.class',
             'org/springframework/http/converter/StringHttpMessageConverter.class',
             'org/springframework/http/converter/json/MappingJacksonHttpMessageConverter.class',
+            'org/springframework/http/converter/json/package-info.class',
             'org/springframework/util/Assert.class',
             'org/springframework/util/CollectionUtils.class',
             'org/springframework/util/CollectionUtils$EnumerationIterator.class',
@@ -188,6 +215,7 @@ project('spring-android-rest-template') {
             'org/springframework/util/LinkedMultiValueMap.class',
             'org/springframework/util/MultiValueMap.class',
             'org/springframework/util/ObjectUtils.class',
+            'org/springframework/util/package-info.class',
             'org/springframework/util/ResourceUtils.class',
             'org/springframework/util/StringUtils.class',
             'org/springframework/web/client/DefaultResponseErrorHandler.class',
@@ -195,12 +223,14 @@ project('spring-android-rest-template') {
             'org/springframework/web/client/HttpMessageConverterExtractor.class',
             'org/springframework/web/client/HttpServerErrorException.class',
             'org/springframework/web/client/HttpStatusCodeException.class',
+            'org/springframework/web/client/package-info.class',
             'org/springframework/web/client/RequestCallback.class',
             'org/springframework/web/client/ResourceAccessException.class',
             'org/springframework/web/client/ResponseErrorHandler.class',
             'org/springframework/web/client/ResponseExtractor.class',
             'org/springframework/web/client/RestClientException.class',
             'org/springframework/web/client/RestOperations.class',
+            'org/springframework/web/util/package-info.class',
             'org/springframework/web/util/UriTemplate.class',
             'org/springframework/web/util/UriTemplate$Parser.class',
             'org/springframework/web/util/UriUtils.class'
