--- a/build.gradle
+++ b/build.gradle
@@ -145,6 +145,7 @@ project('spring-android-rest-template') {
 	
 	dependencies {
         compile ("org.apache.httpcomponents:httpclient:$httpComponentsClientVersion") { provided = true }
+        compile ("commons-httpclient:commons-httpclient:3.1") { optional = true }
         compile files(projLibDir)
         testCompile "javax.servlet:servlet-api:$javaxServletApiVersion"
         testCompile "commons-fileupload:commons-fileupload:$commonsFileuploadVersion"
@@ -185,9 +186,6 @@ project('spring-android-rest-template') {
             'org/springframework/http/package-info.class',
             'org/springframework/http/ResponseEntity.class',
             'org/springframework/http/client/AbstractClientHttpRequest.class',
-            'org/springframework/http/client/CommonsClientHttpRequest.class',
-            'org/springframework/http/client/CommonsClientHttpRequestFactory.class',
-            'org/springframework/http/client/CommonsClientHttpResponse.class',
             'org/springframework/http/client/ClientHttpRequest.class',
             'org/springframework/http/client/ClientHttpRequestFactory.class',
             'org/springframework/http/client/ClientHttpResponse.class',
