--- a/build.gradle
+++ b/build.gradle
@@ -101,8 +101,9 @@ configure(javaprojects) {
     springVersion = '3.0.5.RELEASE'
     androidVersion = '1.5_r3'
     httpComponentsClientVersion = '4.0.1'
-	commonsHttpClientVersion = '3.1'
-	androidRomeVersion = '1.0.0-r2'
+    commonsHttpClientVersion = '3.1'
+    androidRomeVersion = '1.0.0-r2'
+    simpleXmlVersion = '2.4.1'
     javaxServletApiVersion = '2.5'
     commonsFileuploadVersion = '1.2'
     jettyVersion = '6.1.9'
@@ -146,24 +147,27 @@ project('spring-android-rest-template') {
     // build against the extracted class files
     sourceSets.main.resources.srcDir projLibDir
 
-	repositories {
+    repositories {
         mavenRepo urls: 'https://android-rome-feed-reader.googlecode.com/svn/maven2/releases'
     }
-	
-	dependencies {
-		compile ("com.google.android:android:$androidVersion") { provided = true }
+    
+    dependencies {
+        compile ("com.google.android:android:$androidVersion") { provided = true }
         compile ("commons-httpclient:commons-httpclient:$commonsHttpClientVersion") { optional = true }
-		compile ("com.google.code.android-rome-feed-reader:android-rome-feed-reader:$androidRomeVersion") { optional = true }
-		compile ("org.simpleframework:simple-xml:2.4.1") { optional = true }
+        compile ("com.google.code.android-rome-feed-reader:android-rome-feed-reader:$androidRomeVersion") { optional = true }
+        compile ("org.simpleframework:simple-xml:$simpleXmlVersion") { 
+            optional = true 
+            transitive = false 
+        }
         compile files(projLibDir)
-		testCompile "org.springframework:spring-core:$springVersion"
+        testCompile "org.springframework:spring-core:$springVersion"
         testCompile "javax.servlet:servlet-api:$javaxServletApiVersion"
         testCompile "commons-fileupload:commons-fileupload:$commonsFileuploadVersion"
         testCompile "org.mortbay.jetty:jetty:$jettyVersion"
         testCompile "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
-		testCompile "xmlunit:xmlunit:$xmlUnitVersion"
+        testCompile "xmlunit:xmlunit:$xmlUnitVersion"
     }
-	
+    
     // configuration for extracting required class files from springframework
     configurations { dependencyconf }
     dependencies {
@@ -174,11 +178,12 @@ project('spring-android-rest-template') {
     compileJava.doFirst {
         // Required springframework classes for RestTemplate support
         classFilter = [
-			'org/springframework/beans/BeansException.class',
-			'org/springframework/beans/PropertyAccessException.class',
-			'org/springframework/beans/TypeMismatchException.class',			
+            'org/springframework/beans/BeansException.class',
+            'org/springframework/beans/PropertyAccessException.class',
+            'org/springframework/beans/TypeMismatchException.class',
             'org/springframework/beans/factory/DisposableBean.class',
             'org/springframework/beans/factory/package-info.class',
+            'org/springframework/core/ErrorCoded.class',
             'org/springframework/core/NestedExceptionUtils.class',
             'org/springframework/core/NestedIOException.class',
             'org/springframework/core/NestedRuntimeException.class',
@@ -217,7 +222,7 @@ project('spring-android-rest-template') {
             'org/springframework/http/converter/HttpMessageNotWritableException.class',
             'org/springframework/http/converter/package-info.class',
             'org/springframework/http/converter/StringHttpMessageConverter.class',
-			'org/springframework/http/converter/feed/package-info.class',
+            'org/springframework/http/converter/feed/package-info.class',
             'org/springframework/http/converter/json/MappingJacksonHttpMessageConverter.class',
             'org/springframework/http/converter/json/package-info.class',
             'org/springframework/http/converter/xml/package-info.class',
